--- a/publications.html
+++ b/publications.html
@@ -185,7 +185,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">Rethinking Class-Balanced Methods for Long-Tailed Visual Recognition from a Domain Adaptation Perspective</h3>
                       <div class="description">
                         <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020 <b><font color="blue">(Oral) </font></b>  <span class="block-elem">M Jamal*, M Brown, L Wang, M Yang, and <b>B Gong</b></span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  </font>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2003.10780.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2003.10780">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/abdullahjamal/Longtail_DA">Code</a> ] </font>
                       </div>
                     </div>
                   </div>
@@ -195,8 +195,8 @@ http://themeforest.net/user/owwwlab/
                     <div class="content-wrapper">
                       <h3 class="title">Neural Networks Are More Data-Efficient Teachers Than Human Raters: Active Mixup for Knowledge Distillation from a Blackbox Teacher Model</h3>
                       <div class="description">
-                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020 <b><font color="blue">(Oral) </font></b> <span class="block-elem">D Wang, *Y Li, L Wang, and <b>B Gong</b></span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  </font>
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020 <b><font color="blue">(Oral) </font></b> <span class="block-elem">D Wang, Y Li*, L Wang, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2003.13960.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2003.13960">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/dwang181/active-mixup">Code</a> ] </font>
                       </div>
                     </div>
                   </div>
@@ -207,7 +207,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">Open Compound Domain Adaptation</h3>
                       <div class="description">
                         <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020 <b><font color="blue">(Oral) </font></b> <span class="block-elem">Z Liu=, Z Miao=, X Pan, X Zhan, D Lin, S Yu, and <b>B Gong</b></span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/1909.03403">ArXiv</a> ] </font>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1909.03403.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/1909.03403">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://www.youtube.com/watch?v=YcmgCCRA1qc">Demo</a> ]&nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://liuziwei7.github.io/projects/CompoundDomain.html">Project page</a> ]</font>
                       </div>
                     </div>
                   </div>
@@ -218,7 +218,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">Adversarial Examples Improve Image Recognition</h3>
                       <div class="description">
                         <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">C Xie, M Tan, <b>B Gong</b>, J Wang, A Yuille, and Q Le</span></span></div>
-                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/1911.09665">ArXiv</a> ]</font>
+                        <font color="blue">&#10236; [ <a href="papers/cvpr20-advprop.pdf">PDF</a> ]  &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/1911.09665">ArXiv</a> ]</font>
                       </div>
                     </div>
                   </div>
@@ -230,6 +230,17 @@ http://themeforest.net/user/owwwlab/
                       <div class="description">
                         <div class="citation"><span> International Conference on Learning Representations <b>(ICLR)</b>, 2020  <span class="block-elem">R Zhai, C Dan, D He, H Zhang, <b>B Gong</b>, P Ravikumar, C-J Hsieh, and L Wang</span></span></div>
                         <font color="blue">&#10236; [ <a href="https://openreview.net/forum?id=rJx1Na4Fwr">Openreview</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://openreview.net/pdf?id=rJx1Na4Fwr">PDF</a> ]  </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICRA</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Look, Listen, and Act: Towards Audio-Visual Embodied Navigation</h3>
+                      <div class="description">
+                        <div class="citation"><span> International Conference on Learning Representations <b>(ICLR)</b>, 2020  <span class="block-elem">C Gan=, Y Zhang=, J Wu, <b>B Gong</b>, and J Tenenbaum</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/1912.11684.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://www.youtube.com/watch?v=WMpddhYZ1bc&feature=emb_logo">Demo</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="http://avn.csail.mit.edu/">Project page</a> ] </font>
                       </div>
                     </div>
                   </div>
