--- a/students.html
+++ b/students.html
@@ -122,7 +122,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/fareeha.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Fareeha Irfan</a>
-                        <div class="subtitle">Master student, 2015--2017 <br>She likes fashionability.</div>
+                        <div class="subtitle">Master, 2015-2017 <br>She likes fashionability.</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -130,7 +130,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yang.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Yang Zhang</a>
-                        <div class="subtitle">PhD student, 2015-- <br> He uses simulation for real. <br>(2018--, co-supervised w/ Hassan Foroosh)</div>
+                        <div class="subtitle">Congrats, Dr. Yang! 2015-2020 <br> He uses simulation for real. <br>(2018-2020, co-supervised w/ Hassan Foroosh)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -138,7 +138,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/aidean.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Aidean Sharghi</a>
-                        <div class="subtitle">PhD student, 2015--2017<br> He summarizes videos.<br></div>
+                        <div class="subtitle">PhD student, 2015--017<br> He summarizes videos.<br></div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -146,7 +146,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yandong.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Yandong Li</a>
-                        <div class="subtitle">PhD student, 2017--<br> He reinforces sequential models.<br>(2018--, co-supervised w/ Liqiang Wang)</div>
+                        <div class="subtitle">PhD student, 2017-<br> He reinforces sequential models.<br>(2018--, co-supervised w/ Liqiang Wang)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -154,7 +154,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/jamal.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Muhammad Abdullah Jamal</a>
-                        <div class="subtitle">PhD student, 2016--<br> He detects faces.<br>(2018--, co-supervised w/ Guojun Qi)</div>
+                        <div class="subtitle">PhD student, 2016-<br> He detects faces.<br>(2018-, co-supervised w/ Guojun Qi)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -162,7 +162,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yifan.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Yifan Ding</a> 
-                        <div class="subtitle">PhD student, 2015--<br>She learns with weak supervision.<br>(2018--, co-supervised w/ Liqiang Wang)</div>
+                        <div class="subtitle">PhD student, 2015-<br>She learns with weak supervision.<br>(2018-, co-supervised w/ Liqiang Wang)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -170,7 +170,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/lijun.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="#" class="title">Lijun Li</a>
-                        <div class="subtitle">Visiting PhD student, 2016--2017<br> He captions videos.</div>
+                        <div class="subtitle">Visiting PhD student, 2016-2017<br> He captions videos.</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
@@ -222,7 +222,7 @@ http://themeforest.net/user/owwwlab/
               <div class="container">
                 <div class="row call-out tb-vcenter-wrapper">
                   <div class="col-sm-8 vcenter">
-                    <h2 class="title">Together, we conduct research into challenging problems in AI.   </h2>
+                    <h2 class="title">Together, we study AI and develop a synergy between machine learning and computer vision.  </h2>
                     <!--h4 class="sub-title">Absolutely Stunning Design &amp; Functionality Common Things Expected</h4-->
                   </div>
                   <div class="col-sm-4 vcenter text-center"><a href="publications.html" class="btn btn-medium btn-circle btn-skin-yellow btn-icon-right btn-anim-i"><i class="oli oli-forward"></i><span>read more</span></a></div>
