--- a/publications.html
+++ b/publications.html
@@ -193,7 +193,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title">Neural Networks Are More Data-Efficient Teachers Than Human Raters: Active Mixup for Knowledge Distillation from a Blackbox Teacher Model</h3>
+                      <h3 class="title">Neural Networks Are More Productive Teachers Than Human Raters: Active Mixup for Data-Efficient Knowledge Distillation from a Blackbox Model</h3>
                       <div class="description">
                         <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020 <b><font color="blue">(Oral) </font></b> <span class="block-elem">D Wang, Y Li*, L Wang, and <b>B Gong</b></span></span></div>
                         <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2003.13960.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2003.13960">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/dwang181/active-mixup">Code</a> ] </font>
