--- a/publications.html
+++ b/publications.html
@@ -224,6 +224,17 @@ http://themeforest.net/user/owwwlab/
                   </div>
 
                   <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">PolarNet: An Improved Grid Representation for Online LiDAR Point Clouds Semantic Segmentation</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">Y Zhang=*, Z Zhou=, P David, X Yue, Z Xi, <b>B Gong</b>, and H. Foroosh</span></span></div>
+                        <font color="blue">&#10236; [ <a href="papers/cvpr20-polarnet.pdf">PDF</a> ]  &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/edwardzhou130/PolarSeg">Code</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ICLR</div><br>
                     <div class="content-wrapper">
                       <h3 class="title">MACER: Attack-free and Scalable Robust Training via Maximizing Certified Radius</h3>
