--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <p>Area chair of CVPR'20, ECCV'20, ICML'19-20, NeurIPS'19, ICCV'19, AISTATS'19, and WACV'18-20</p>
+                    <p>Area chair of CVPR'20, ECCV'20, ICML'19-20, NeurIPS'19-20, ICCV'19, AISTATS'19, and WACV'18-20</p>
                     <p></p>
                     <p>Senior area chair (meta-reviewer) of AAAI'20</p>
                     <p></p>
@@ -215,7 +215,7 @@
                         <div class="tl-item"></div>
 
                         <div class="tl-item">
-                          <h5 class="title">Papers on adversarial deep learning, long-tailed classification, and domain (2020)</h5>
+                          <h5 class="title">Papers on adversarial deep learning, long-tailed classification, and domain adaptation (2020)</h5>
                           <div class="description"> 
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
@@ -223,7 +223,7 @@
                           <div class="description"> 
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="research.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
-                          <h5 class="title">Serving as an area chair of CVPR 2020, ECCV 2020, ICML 2020, and WACV 2020 (02/2019)</h5>
+                          <h5 class="title">Serving as an area chair of NeurIPS 2020, CVPR 2020, ECCV 2020, ICML 2020, and WACV 2020 (02/2019)</h5>
                           <h5 class="title">Serving in two NSF panels (2020)</h5>
                         </div>
 
