talks on CVPR 2020

--- a/index.html
+++ b/index.html
@@ -219,8 +219,18 @@
                           <div class="description"> 
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
-                          <h5 class="title"><a href="research.html">Talks</a> on long-tailed visual recognition (2020) </h5>
+                          <h5 class="title"><a href="research.html">Invited Talks</a> on "Towards Visual Recognition in the Wild: Long-Tailed Sources and Open Compound Targets" (06/2020) </h5>
                           <div class="description"> 
+                            <p>
+                                Presented at CVPR 2020 Workshops on <u><a href="https://lidchallenge.github.io/index.html">Learning from Imperfect Data</a></u> and <u><a href="https://adv-workshop-2020.github.io/">Adversarial Machine Learning in Computer Vision</a></u>, respectively 
+                            </p>
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="research.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title"><a href="research.html">Invited Talks</a> on "Long-Tailed Visual Recognition" (2020) </h5>
+                          <div class="description"> 
+                            <p>
+                                Presented at CVPR 2020 Area Chair Workshop and WACV 2020 Workshop on <u><a href="https://wvasbsd.github.io/2020/index.html">Vision Applications and Solutions to Biased or Scarce Data </a></u> 
+                            </p>
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="research.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
                           <h5 class="title">Serving as an area chair of NeurIPS 2020, CVPR 2020, ECCV 2020, ICML 2020, and WACV 2020 (02/2019)</h5>
