--- a/research.html
+++ b/research.html
@@ -128,7 +128,7 @@ http://themeforest.net/user/owwwlab/
                         <div class="pub-item with-icon">
                           <div class="elem-wrapper"><i class="oli oli-bookmark"></i></div>
                           <div class="content-wrapper">
-                            <h3 class="title"><font color="blue">Towards Visual Recognition in the Wild: Long-Tailed Sources and Open Compound Targets</font> &#10230; <a href="https://docs.google.com/presentation/d/1647srRFowWU75oVymBrQqryEo2_52wdKujo53pWImBg/edit?usp=sharing"> <u>[Slides]</u> </a></h3>
+                            <h3 class="title"><font color="blue">Towards Visual Recognition in the Wild: Long-Tailed Sources and Open Compound Targets</font> &#10230; <a href="https://docs.google.com/presentation/d/1647srRFowWU75oVymBrQqryEo2_52wdKujo53pWImBg/edit?usp=sharing"> <u>[Slides, 30 mins]</u> </a><a href="https://docs.google.com/presentation/d/1R0jY-dYI_5A0eHK291FSEF7oJKIkZelyXmpaGB5GdcY/edit?usp=sharing"> <u>[Slides, 45 mins]</u> </a></h3>
                             <div class="description"> 
                               <p>
                                 Presented at CVPR 2020 Workshops on <u><a href="https://lidchallenge.github.io/index.html">Learning from Imperfect Data</a></u> and <u><a href="https://adv-workshop-2020.github.io/">Adversarial Machine Learning in Computer Vision</a></u>, respectively
