--- a/publications.html
+++ b/publications.html
@@ -185,7 +185,7 @@ http://themeforest.net/user/owwwlab/
                       <h3 class="title">Rethinking Class-Balanced Methods for Long-Tailed Visual Recognition from a Domain Adaptation Perspective</h3>
                       <div class="description">
                         <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020 <b><font color="blue">(Oral) </font></b>  <span class="block-elem">M Jamal*, M Brown, L Wang, M Yang, and <b>B Gong</b></span></span></div>
-                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2003.10780.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2003.10780">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/abdullahjamal/Longtail_DA">Code</a> ] </font>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2003.10780.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2003.10780">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://drive.google.com/file/d/1wOsHu88Tmh2gMbxKttgcSTmQO2PqGxrm/view?usp=sharing">Slides</a> ]&nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/abdullahjamal/Longtail_DA">Code</a> ] </font>
                       </div>
                     </div>
                   </div>
@@ -230,6 +230,17 @@ http://themeforest.net/user/owwwlab/
                       <div class="description">
                         <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2020  <span class="block-elem">Y Zhang=*, Z Zhou=, P David, X Yue, Z Xi, <b>B Gong</b>, and H. Foroosh</span></span></div>
                         <font color="blue">&#10236; [ <a href="papers/cvpr20-polarnet.pdf">PDF</a> ]  &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/edwardzhou130/PolarSeg">Code</a> ]</font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ECCV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Improving Object Detection with Selective Self-supervised Self-training</h3>
+                      <div class="description">
+                        <div class="citation"><span>European Conference on Computer Vision <b>(ECCV)</b>, 2020 <span class="block-elem">Y Li*, D Huang, D Qin, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="">ArXiv coming soon</a> ] </font>
                       </div>
                     </div>
                   </div>
