--- a/publications.html
+++ b/publications.html
@@ -237,10 +237,10 @@ http://themeforest.net/user/owwwlab/
                   <div class="tl-item pub-item with-thumb">
                     <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;ECCV</div><br>
                     <div class="content-wrapper">
-                      <h3 class="title">Improving Object Detection with Selective Self-supervised Self-training</h3>
+                      <h3 class="title">Improving Object Detection with Selective Self-Supervised Self-training</h3>
                       <div class="description">
                         <div class="citation"><span>European Conference on Computer Vision <b>(ECCV)</b>, 2020 <span class="block-elem">Y Li*, D Huang, D Qin, and <b>B Gong</b></span></span></div>
-                        <font color="blue">&#10236; [ <a href="">ArXiv coming soon</a> ] </font>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/abs/2007.09162">ArXiv</a> ] </font>
                       </div>
                     </div>
                   </div>
