--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <p>Area chair of CVPR'20, ECCV'20, ICML'19-20, NeurIPS'19-20, ICCV'19, AISTATS'19, and WACV'18-20</p>
+                    <p>Area chair of CVPR'20, ECCV'20, ICML'19-20, NeurIPS'19-20, ICLR'21, ICCV'19, AISTATS'19, and WACV'18-20</p>
                     <p></p>
-                    <p>Senior area chair (meta-reviewer) of AAAI'20</p>
+                    <p>Senior area chair (meta-reviewer) of AAAI'20-21</p>
                     <p></p>
                     <p>Reviewing for NSF (proposals), NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AISTATS, T-PAMI, IJCV, JMLR, etc.</p>
                     <p></p>
