--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="row">
                   <div class="col-md-9">
                     <h3 class="with-sideline">Biography</h3>
-                    <p>Boqing Gong is a research scientist at Google, Seattle and a principal investigator at ICSI, Berkeley. His research in machine learning and computer vision focuses on sample-efficient learning (e.g., domain adaptation, few-shot, reinforcement, webly-supervised, and self-supervised learning) and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was a (senior) area chair of NeurIPS, ICML, CVPR, ICCV, ECCV, AAAI, AISTATS, and WACV. He received his Ph.D. in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
+                    <p>Boqing Gong is a research scientist at Google. His research in machine learning and computer vision focuses on label-efficient learning and the visual analytics of objects, scenes, human activities, and their attributes. Before joining Google in 2019, he worked in Tencent and was a tenure-track Assistant Professor at the University of Central Florida (UCF). He received an NSF CRII award in 2016 and an NSF BIGDATA award in 2017, both of which were the first of their kinds ever granted to UCF. He is/was a (senior) area chair of NeurIPS, ICML, CVPR, ICCV, ECCV, ICLR, AAAI, AISTATS, and WACV. He earned a Ph.D. degree in 2015 at the University of Southern California, where the Viterbi Fellowship partially supported his work.</p>
                     <p><br></p>
 
                     
@@ -155,7 +155,7 @@
                     <h3 class="with-sideline">CV</h3><a href="CV_BGong.pdf" class="btn btn-medium btn-block btn-round btn-thick-border"><i class="oi-download-from-cloud"></i><span class="text-capitilize">Download CV</span></a>
                     <p><br></p>
                     <h3 class="with-sideline">Recent services</h3>
-                    <p>Area chair of CVPR'20, ECCV'20, ICML'19-20, NeurIPS'19-20, ICLR'21, ICCV'19, AISTATS'19, and WACV'18-20</p>
+                    <p>Area chair of CVPR'20, ECCV'20, ICML'19-21, NeurIPS'19-21, ICLR'21, ICCV'19-21, AISTATS'19, and WACV'18-20</p>
                     <p></p>
                     <p>Senior area chair (meta-reviewer) of AAAI'20-21</p>
                     <p></p>
@@ -191,6 +191,8 @@
                         <li></li>
                         <li></li>
                         <li></li>
+                        <li></li>
+                        <li>2021</li>
                         <li>2020</li>
                         <li>2019</li>
                         <li>2018</li>
@@ -213,6 +215,21 @@
                         <div class="tl-item"></div>
                         <div class="tl-item"></div>
                         <div class="tl-item"></div>
+                        <div class="tl-item"></div>
+
+                        <div class="tl-item">
+                          <h5 class="title">Papers on mobile video networks, adversarial deep learning, and domain adaptation/generalization (2021)</h5>
+                          <div class="description"> 
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="publications.html"><i class="icon oi-forward"></i><span>read more</span></a>
+                          </div>
+                          <h5 class="title"><a href="https://vita-group.github.io/cvpr_2021_data_efficient_tutorial.html">IEEE CVPR 2021 Tutorial</a> on "Long-Tailed Visual Recognition" </h5>
+                          <div class="description"> 
+                            <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="research.html"><i class="icon oi-forward"></i><span>slides</span></a>
+                          </div>
+                          <h5 class="title"><a href="https://l2id.github.io/index.html">Invited speaker at the IEEE CVPR 2021 Workshop on Learning from Limited and Imperfect Data</a> </h5>
+                          <h5 class="title">Serving as an area chair for NeurIPS 2021, ICCV 2021, ICML 2021, and IJCAI 2021</h5>
+                          <h5 class="title">Serving on one NSF panel (2021)</h5>
+                        </div>
 
                         <div class="tl-item">
                           <h5 class="title">Papers on adversarial deep learning, long-tailed classification, and domain adaptation (2020)</h5>
@@ -234,7 +251,7 @@
                             <a class="btn btn-small btn-round btn-icon-right btn-anim-i" href="research.html"><i class="icon oi-forward"></i><span>read more</span></a>
                           </div>
                           <h5 class="title">Serving as an area chair of NeurIPS 2020, CVPR 2020, ECCV 2020, ICML 2020, and WACV 2020 (02/2019)</h5>
-                          <h5 class="title">Serving in two NSF panels (2020)</h5>
+                          <h5 class="title">Serving on two NSF panels (2020)</h5>
                         </div>
 
                         <div class="tl-item">
