--- a/publications.html
+++ b/publications.html
@@ -102,6 +102,7 @@ http://themeforest.net/user/owwwlab/
           <section id="main-area">
             <section class="section section-narrow slim-container bg-gray">
               <div class="container">
+                <div class="row pull-up-210">
                 <div data-cols="3" data-nav="true" data-margin="30" data-cols-md='2' class="owl-carousel items featured-items owwwlab-theme nav-top-right">
 
                   <div class="featured-item boxed"><a href="" class="book-el set-bg"><img src="assets/img/long-tail.png" class="set-me">
@@ -159,7 +160,7 @@ http://themeforest.net/user/owwwlab/
                           <h2 class="title">GFK: geodesic flow kernel</h2>
                         </div>
                       </div></a></div>
-                    
+                  </div>  
                 </div>
               </div>
             </section>
@@ -177,6 +178,83 @@ http://themeforest.net/user/owwwlab/
                       <h2 class="title"><u><a href="https://arxiv.org/search/?query=boqing+gong&searchtype=all&source=header">Preprints on ArXiv</a></u></h2>
                       <h2 class="title"><br>* students I (co-)supervised. <br>= equal contribution among authors. </h2>
                       <h5 class="title"></h5>
+                  </div>
+
+                  <div class="tl-item active pub-item with-thumb"><span class="item-section">2021</span>
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">MoViNets: Mobile Video Networks for Efficient Video Recognition</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2021<span class="block-elem">D Kondratyuk, L Yuan, Y Li, L Zhang, M Tan, M Brown, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2103.11511.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2103.11511">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/tensorflow/models/tree/master/official/vision">Code coming soon</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Ranking Neural Checkpoints</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2021 <span class="block-elem">Y Li*, X Jia, R Sang, Y Zhu, B Green, L Wang, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2011.11200.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2011.11200">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="">Code coming soon</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Robust and Accurate Object Detection via Adversarial Learning</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2021 <span class="block-elem">X Chen, C Xie, M Tan, L Zhang, C-J Hsieh, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2103.13886.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2103.13886">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://github.com/google/automl/blob/master/efficientdet/Det-AdvProp.md">Detector checkpoints</a> ] </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Complete and Label: A Domain Adaptation Approach to Semantic Segmentation of LiDAR Point Clouds</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2021 <span class="block-elem">L Yi, <b>B Gong</b>, and T Funkhouser</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2007.08488.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2007.08488">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp; </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Adversarially Adaptive Normalization for Single Domain Generalization</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2021 <span class="block-elem">X Fan, Q Wang, J Ke, F Yang, <b>B Gong</b>, and M Zhou</span></span></div>
+                        <font color="blue">&#10236; [ <a href="">PDF coming soon</a> ]  </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;CVPR</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Spatiotemporal Contrastive Video Representation Learning</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2021 <span class="block-elem">R Qian=, T Meng=, <b>B Gong</b>, M-H Yang, H Wang, S Belongie, and Y Cui</span></span></div>
+                        <font color="blue">&#10236; [ <a href="https://arxiv.org/pdf/2008.03800.pdf">PDF</a> ] &nbsp;&nbsp;&nbsp;&nbsp;[ <a href="https://arxiv.org/abs/2008.03800">ArXiv</a> ] &nbsp;&nbsp;&nbsp;&nbsp; </font>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="tl-item pub-item with-thumb">
+                    <div class="elem-wrapper"><br><br>&nbsp;&nbsp;&nbsp;&nbsp;WACV</div><br>
+                    <div class="content-wrapper">
+                      <h3 class="title">Analyzing Deep Neural Network’s Transferability via Fr&eacute;chet Distance</h3>
+                      <div class="description">
+                        <div class="citation"><span>IEEE Winter Conference on Applications of Computer Vision <b>(WACV)</b>, 2021 <span class="block-elem">Y Ding, L Wang, and <b>B Gong</b></span></span></div>
+                        <font color="blue">&#10236; [ <a href="papers/transferability-analysis.pdf">PDF</a> ] 
+                      </div>
+                    </div>
                   </div>
 
                   <div class="tl-item active pub-item with-thumb"><span class="item-section">2020</span>
