--- a/students.html
+++ b/students.html
@@ -130,7 +130,7 @@ http://themeforest.net/user/owwwlab/
                   <div class="col-xs-6 col-md-4">
                     <div class="vc-card boxed"><a href="#"><img src="assets/img/people/yang.jpg" alt="people"></a>
                       <div class="vc-card-wrapper"><a href="https://scholar.google.com/citations?user=9dFr77YAAAAJ&hl=en" class="title">Yang Zhang</a>
-                        <div class="subtitle">Congrats, Dr. Yang! 2015-2020 <br> He uses simulation for real. <br>(2018-2020, co-supervised w/ Hassan Foroosh)</div>
+                        <div class="subtitle"><font color="blue">Congrats, Dr. Yang!</font> 2015-2020 <br> He uses simulation for real. <br>(2018-2020, co-supervised w/ Hassan Foroosh)</div>
                       </div>
                       <!--div class="links"><a href="#" data-toggle="tooltip" data-original-title="homepage"><i class="fa fa-external-link"></i></a><a href="#" data-toggle="tooltip" data-original-title="Biography"><i class="oli oli-user_male_circle"></i></a><a href="#" data-toggle="tooltip" data-original-title="Facebook"><i class="fa fa-facebook"></i></a><a href="#" data-toggle="tooltip" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></div-->
                     </div>
